@@ -10,6 +10,8 @@ class Test {
         get { echo "get\n"; }
         set { echo "set($value)\n"; }
     }
+    public $prop5 { get { echo "get\n"; } }
+    public $prop6 { set { echo "set($value)\n"; } }
 }
 abstract class Test2 {
     abstract public $prop4 { get; set; }
@@ -27,13 +29,17 @@ function dumpFlags(ReflectionProperty $rp) {
 $test = new Test;
 
 $rp1 = new ReflectionProperty(Test::class, 'prop1');
+var_dump($rp1->hasHook(PropertyHookType::Get));
 var_dump($rp1->getHook(PropertyHookType::Get));
+var_dump($rp1->hasHook(PropertyHookType::Set));
 var_dump($rp1->getHook(PropertyHookType::Set));
 dumpFlags($rp1);
 echo "\n";
 
 $rp2 = new ReflectionProperty(Test::class, 'prop2');
+var_dump($rp2->hasHook(PropertyHookType::Get));
 var_dump($g = $rp2->getHook(PropertyHookType::Get));
+var_dump($rp2->hasHook(PropertyHookType::Set));
 var_dump($s = $rp2->getHook(PropertyHookType::Set));
 var_dump($g->invoke($test));
 try {
@@ -48,7 +54,9 @@ dumpFlags($rp2);
 echo "\n";
 
 $rp3 = new ReflectionProperty(Test::class, 'prop3');
+var_dump($rp3->hasHook(PropertyHookType::Get));
 var_dump($g = $rp3->getHook(PropertyHookType::Get));
+var_dump($rp3->hasHook(PropertyHookType::Set));
 var_dump($s = $rp3->getHook(PropertyHookType::Set));
 $g->invoke($test);
 $s->invoke($test, 42);
@@ -57,19 +65,34 @@ echo "\n";
 
 $rp4 = new ReflectionProperty(Test2::class, 'prop4');
 dumpFlags($rp4);
+echo "\n";
+
+$rp5 = new ReflectionProperty(Test::class, 'prop5');
+var_dump($rp5->hasHook(PropertyHookType::Get));
+var_dump($rp5->hasHook(PropertyHookType::Set));
+echo "\n";
+
+$rp6 = new ReflectionProperty(Test::class, 'prop6');
+var_dump($rp6->hasHook(PropertyHookType::Get));
+var_dump($rp6->hasHook(PropertyHookType::Set));
+echo "\n";
 
 ?>
 --EXPECT--
+bool(false)
 NULL
+bool(false)
 NULL
 Abstract: false false
 
+bool(true)
 object(ReflectionMethod)#6 (2) {
   ["name"]=>
   string(11) "$prop2::get"
   ["class"]=>
   string(4) "Test"
 }
+bool(true)
 object(ReflectionMethod)#7 (2) {
   ["name"]=>
   string(11) "$prop2::set"
@@ -80,12 +103,14 @@ NULL
 NULL
 Abstract: false false
 
+bool(true)
 object(ReflectionMethod)#9 (2) {
   ["name"]=>
   string(11) "$prop3::get"
   ["class"]=>
   string(4) "Test"
 }
+bool(true)
 object(ReflectionMethod)#6 (2) {
   ["name"]=>
   string(11) "$prop3::set"
@@ -97,3 +122,9 @@ set(42)
 Abstract: false false
 
 Abstract: true true
+
+bool(true)
+bool(false)
+
+bool(false)
+bool(true)
