@@ -2,6 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 8.4.0RC1
 
+- Core:
+  . Add missing ReflectionProperty::hasHook[s]() methods. (ilutov)
+
 - DOM:
   . Fix XML serializer errata: xmlns="" serialization should be allowed.
     (nielsdos)
